fix: css changes on mobile layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,8 @@ margin-bottom: 2em;
   }
   #desc{
     font-size: 1.8em;
-    margin-top: 2em;
+    margin-top: 0.8em;
+    margin-bottom:0em;
   }
 
   .socials > a {
@@ -131,7 +132,7 @@ margin-bottom: 2em;
   }
   .socials {
     /* margin-inline: 0.5em; */
-    margin-top: 2em;
+    margin-top: 1em;
     min-width: 90%;
     
   }
